Add project files